--- a/templates/BackEnd/listeDesComptesClients.html.twig
+++ b/templates/BackEnd/listeDesComptesClients.html.twig
@@ -65,7 +65,7 @@
                         <div class="d-flex justify-content-between">
                             {# <a href="{{ path('app_liste_des_contrats' , {id : e.id}) }}" class="btn btn-outline-light btn-sm w-50 me-2">&nbsp;Voir&nbsp;</a>
                             <a href="{{ path('app_editer_un_compte_client' , {id : e.id}) }}" class="btn btn-outline-light btn-sm w-50">Editer</a> #}
-                            <a href="{{ path('app_liste_des_contrats' , {id : cc.client.id , pathContratDansPublic : '' }) }}" class="btn btn-outline-light btn-sm shadow w-50 me-2" data-bs-custom-class="custom-tooltip-edition shadow" data-bs-toggle="tooltip" data-bs-delay='{ "show": 600, "hide": 100 }' data-bs-placement="bottom" data-bs-title="Voir">
+                            <a href="{{ path('app_liste_des_contrats' , {id : cc.client.id }) }}" class="btn btn-outline-light btn-sm shadow w-50 me-2" data-bs-custom-class="custom-tooltip-edition shadow" data-bs-toggle="tooltip" data-bs-delay='{ "show": 600, "hide": 100 }' data-bs-placement="bottom" data-bs-title="Voir">
                             {# &#x1f50d; #}<img class="icone-cliquable" src="{{ asset('assets/images/icone_loupe.png') }}" alt="Icône non trouvé."></img>
                             </a>
                             <a href="{{ path( 'app_editer_un_compte_client' , { id : cc.client.id }) }}" class="btn btn-outline-light btn-sm shadow w-50" data-bs-custom-class="custom-tooltip-edition shadow" data-bs-toggle="tooltip" data-bs-delay='{ "show": 600, "hide": 100 }' data-bs-placement="bottom" data-bs-title="Editer">
@@ -79,21 +79,24 @@
     </table>
 </div>
 
-{# <div id="table-mobile" class="d-block d-md-none">
-    {% for e in listeDesEmployes %}
+<div id="table-mobile" class="d-block d-md-none">
+    {% for cc in listeDesComptesClients %}
         <div class="d-flex justify-content-start mb-3">
             <div class="w-75">
-                <span class="fw-bold fs-3">{{e.prenom}} {{e.nom}}</span><br>
-                {% for r in e.roles %}<span class="fs-6 fs-italic">{{r|replace({'ROLE_':''})|replace({'_':' '})|lower|capitalize}}{% if not(loop.last) %} ,<br>{% endif %}</span>{% endfor %}<br>
-                {{e.Courriel}}
+                <span class="fw-bold fs-3">{{cc.client.prenom}} {{cc.client.nom}}</span><br>
+                {{cc.nbContrats}} contrat{% if cc.nbContrats > 1 %}s{% endif %}
             </div>
             <div class="d-flex flex-column align-items-center justify-content-center">
-                <a href="{{ path('app_voir_un_employe' , {id : e.id}) }}" class="btn btn-outline-light btn-sm w-100 mb-3">Voir</a>
-                <a href="" class="btn btn-outline-light btn-sm w-100">Editer</a>
+                <a href="{{ path('app_liste_des_contrats' , {id : cc.client.id }) }}" class="btn btn-outline-light btn-sm shadow w-100 mb-3" data-bs-custom-class="custom-tooltip-edition shadow" data-bs-toggle="tooltip" data-bs-delay='{ "show": 600, "hide": 100 }' data-bs-placement="bottom" data-bs-title="Voir">
+                {# Voir #}<img class="icone-cliquable" src="{{ asset('assets/images/icone_loupe.png') }}" alt="Icône non trouvé."></img>
+                </a>
+                <a href="{{ path( 'app_editer_un_compte_client' , { id : cc.client.id }) }}" class="btn btn-outline-light btn-sm shadow w-100" data-bs-custom-class="custom-tooltip-edition shadow" data-bs-toggle="tooltip" data-bs-delay='{ "show": 600, "hide": 100 }' data-bs-placement="bottom" data-bs-title="Editer">
+                {# Editer #}<img class="icone-cliquable" src="{{ asset('assets/images/icone_edition.png') }}" alt="Icône non trouvé."></img>
+                </a>
             </div>
         </div>
     {% endfor %}
-</div> #}
+</div>
 
 {% if admin %}
 <a href="{{ path('app_accueil_administrateur') }}" class="btn btn-outline-light btn-sm shadow mt-4">Retour</a>
