--- a/templates/FrontEnd/UniqueAjouterUnePublication.html.twig
+++ b/templates/FrontEnd/UniqueAjouterUnePublication.html.twig
@@ -9,15 +9,25 @@
     </a>
 </div>
 
-{{ form_start(form) }}
-<div style="" class="p-2">
-    {{ form_row( form.titre ) }}
-    {{ form_row( form.contenu ) }}
-    {{ form_row( form.legende ) }}
-    {{ form_row( form.photo ) }}
-    {{ form_row( form.submit ) }}
-    <a href="{{ path('app_afficher_fac') }}" class="btn btn-outline-light btn-sm mt-3">Annuler</a>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5">
+
+            {{ form_start(form) }}
+            <div style="" class="p-2">
+                {{ form_row( form.titre ) }}
+                {{ form_row( form.contenu ) }}
+                {{ form_row( form.legende ) }}
+                {{ form_row( form.photo ) }}
+                <div class="d-flex align-items-start justify-content-start mt-4">
+                    {{ form_row( form.submit ) }}
+                    <a href="{{ path('app_afficher_fac') }}" class="btn btn-outline-light btn-sm shadow ms-4">Abandonner</a>
+                </div>
+            </div>
+            {{ form_end(form) }}
+
+        </div>
+    </div>
 </div>
-{{ form_end(form) }}
 
 {% endblock %}
