--- a/templates/FrontEnd/EditerUnContrat_.html.twig
+++ b/templates/FrontEnd/EditerUnContrat_.html.twig
@@ -22,53 +22,57 @@
 
 {{ form_start(form) }}
 
-<div class="col-12">
+<div style="" class="p-2">
+
     {{ form_label(form.intitule) }}
     {{ form_widget(form.intitule) }}
     {{ form_errors(form.intitule) }}
-</div>
 
-<div class="col-12 mt-3">
     {{ form_label(form.description) }}
     {{ form_widget(form.description) }}
     {{ form_errors(form.description) }}
+
 </div>
 
-<div class="row g-3 mt-2">
-    <div class="col-12 col-md-6">
+<div style="grid-template-columns: 1fr 1fr;" class="d-grid gap-3">
+
+    <div class="p-1">
         {{ form_label(form.numeroContrat) }}
         {{ form_widget(form.numeroContrat) }}
         {{ form_errors(form.numeroContrat) }}
     </div>
 
-    <div class="col-12 col-md-6">
+    <div class="p-1">
         {{ form_label(form.etatChoisi) }}
         {{ form_widget(form.etatChoisi) }}
         {{ form_errors(form.etatChoisi) }}
     </div>
-</div>
 
-    <div class="row g-3 mt-2">
+    <div style="grid-template-columns: 1fr 1fr;" class="d-grid gap-3">
 
-        <div class="col-12 col-md-3">
+        <div class="p-1">
             {{ form_label(form.dateDebutPrevue) }}
             {{ form_widget(form.dateDebutPrevue) }}
             {{ form_errors(form.dateDebutPrevue) }}
         </div>
 
-        <div class="col-12 col-md-3">
+        <div class="p-1">
             {{ form_label(form.dateFinPrevue) }}
             {{ form_widget(form.dateFinPrevue) }}
             {{ form_errors(form.dateFinPrevue) }}
         </div>
 
-        <div class="col-12 col-md-3">
+    </div>
+
+    <div style="grid-template-columns: 1fr 1fr;" class="d-grid gap-3">
+
+        <div class="p-1">
             {{ form_label(form.dateDebut) }}
             {{ form_widget(form.dateDebut) }}
             {{ form_errors(form.dateDebut) }}
         </div>
 
-        <div class="col-12 col-md-3">
+        <div class="p-1">
             {{ form_label(form.dateFin) }}
             {{ form_widget(form.dateFin) }}
             {{ form_errors(form.dateFin) }}
@@ -76,8 +80,10 @@
 
     </div>
 
+</div>
+
 {% if edition == true %}
-<div class="col-12 col-md-12">
+<div style="" class="p-2">
 
     {{ form_label(form.nomContratActuel) }}
     {{ form_widget(form.nomContratActuel) }}
@@ -86,39 +92,36 @@
 </div>
 {% endif %}
 
-<div class="row g-3 mt-2">
-    <div class="col-12 col-md-6">
-        {% if pathContratActuel is defined and pathContratActuel is not null %}
-            <div class="alert alert-warning fs-6 mt-2" role="alert">
-                ⚠️ Un contrat est déjà enregistré (<strong> {{ pathContratActuel|split('/')|last }} </strong>).<br>
-                En choisissant un nouveau contrat, celui-ci <strong>remplacera</strong> l'ancien lors de la validation du formulaire.
-            </div>
-            <div>
-                📄 <a href="{{ asset(pathContratActuel|default('')) }}" target="_blank">
-                        Télécharger le contrat actuel
-                    </a>
-                    : <strong> {{ pathContratActuel|split('/')|last }} </strong> .
-            </div>
-        {% endif %}
-    </div>
-
-    <div class="col-12 col-md-6">
+<div style="grid-template-columns: 1fr 1fr;" class="d-grid gap-3">
+    <div style="" class="p-2">
 
         {{ form_label(form.cheminFichier) }}
         {{ form_widget(form.cheminFichier) }}
         {{ form_errors(form.cheminFichier) }}
 
+        <div class="d-flex align-items-start justify-content-start mt-5">
+            {{ form_row( form.submit ) }}
+            <a href="{{ path('app_liste_des_contrats' , { id: id }) }}" class="btn btn-outline-light btn-sm shadow ms-4">Abandonner</a>
+        </div>
+
+
+    </div>
+    <div style="" class="p-2">
+        {% if pathContratActuel is defined and pathContratActuel is not null %}
+            <div class="alert alert-warning fs-6 mt-2" role="alert">
+                ⚠️ Un contrat est déjà enregistré (<strong> {{ pathContratActuel|split('/')|last }} </strong>).<br>
+                En choisissant un nouveau contrat, celui-ci <strong>remplacera</strong> l'ancien lors de la validation du formulaire.
+            </div>
+            <p>
+                📄 <a href="{{ asset(pathContratActuel|default('')) }}" target="_blank">
+                        Télécharger le contrat actuel
+                    </a>
+                    : <strong> {{ pathContratActuel|split('/')|last }} </strong> .
+            </p>
+        {% endif %}
     </div>
 </div>
 
-
-<div class="d-flex align-items-start justify-content-start mt-4">
-    {{ form_row( form.submit ) }}
-    <a href="{{ path('app_liste_des_contrats' , { id: id }) }}" class="btn btn-outline-light btn-sm shadow ms-4">Abandonner</a>
-</div>
-
 {{ form_end(form) }}
-
-<br><br>
 
 {% endblock %}
