--- a/templates/FrontEnd/_commentaire_recursive.html.twig
+++ b/templates/FrontEnd/_commentaire_recursive.html.twig
@@ -21,7 +21,7 @@
         </form>
         <div data-bs-custom-class="custom-tooltip-delete" data-bs-toggle="tooltip" data-bs-delay='{ "show": 600, "hide": 100 }' data-bs-placement="bottom" data-bs-title="Supprimer le commentaire">
             <button type="button" class="btn btn-sm shadow" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal-{{ commentaire.id }}">
-                &#x1f5d1;
+                {# &#x1f5d1; #}<img class="icone-cliquable" src="{{ asset('assets/images/icone_corbeille.png') }}" alt="Icône non trouvé."></img>
             </button>
         </div>
         {% include 'Composants/_confirm_delete_modal.html.twig' with {
