--- a/templates/FrontEnd/voirUnContrat.html.twig
+++ b/templates/FrontEnd/voirUnContrat.html.twig
@@ -45,7 +45,7 @@
     </form>
         <div data-bs-custom-class="custom-tooltip-delete" data-bs-toggle="tooltip" data-bs-delay='{ "show": 600, "hide": 100 }' data-bs-placement="bottom" data-bs-title="Supprimer la fiche">
             <button type="button" class="btn btn-outline-danger btn-sm shadow" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal-{{ contrat.id }}">
-                &#x1f5d1;
+                {# &#x1f5d1; #}<img class="icone-cliquable" src="{{ asset('assets/images/icone_corbeille.png') }}" alt="Icône non trouvé."></img>
             </button>
         </div>
     {% include 'Composants/_confirm_delete_modal.html.twig' with {
@@ -130,12 +130,14 @@
 
 <div class="d-flex justify-content-center">
     <div class="d-flex flex-column" style="width: fit-content">
-        <div class="d-flex justify-content-between d-inline-block mb-1">
-            <button id="prev" class='btn btn-outline-primary btn-sm shadow mb-1'>Page précédente</button>
-            &nbsp; &nbsp;
-            <span>Page: <span id="page_num"></span> / <span id="page_count"></span></span>
-            &nbsp; &nbsp;
-            <button id="next" class='btn btn-outline-primary btn-sm shadow mb-1'>Page suivante</button>
+        <div class="badge text-bg-light">
+            <div class="d-flex justify-content-between d-inline-block mt-1">
+                <button id="prev" class='btn btn-outline-primary btn-sm shadow mb-1'>Page précédente</button>
+                &nbsp; &nbsp;
+                <span>Page: <span id="page_num"></span> / <span id="page_count"></span></span>
+                &nbsp; &nbsp;
+                <button id="next" class='btn btn-outline-primary btn-sm shadow mb-1'>Page suivante</button>
+            </div>
         </div>
         <div class="d-flex justify-content-center">
             <canvas id="the-canvas" class="border border-primary border-5 border-opacity-50 rounded"></canvas>
