--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,10 +25,36 @@
         {% endblock %}
     </head>
     <body>
+    {{dump(app)}}
+{% if app.user and app.user.sesRolesContiennent( "ADMINISTRATEUR" ) %}
+        <header class="d-flex flex-column align-items-center mt-3 mb-3">
+            <img src="{{ asset('assets/images/logo.png') }}" width="80px" alt="Logo CLO non trouvé.">  
+            <div class="t-3">Compte client</div>
+        </header>
+
+        <nav class="navbar navbar-expand-lg bg-body-tertiary mb-3">
+        <div class="container-fluid">
+            <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{{ path('app_accueil_administrateur') }}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_liste_des_employes') }}">Employés</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_liste_des_comptes_clients') }}">Clients</a>
+                </li>
+            </ul>
+            </div>
+        </div>
+        </nav>
+{% else %}
         <header class="d-flex flex-column align-items-center mt-3 mb-5">
             <img src="{{ asset('assets/images/logo.png') }}" width="80px" alt="Logo CLO non trouvé.">  
             <div class="t-3">Compte client</div>
         </header>
+{% endif %}
 
         <div class="d-flex justify-content-end position-fixed top-0 end-0 m-3" data-bs-custom-class="custom-tooltip-edition shadow" data-bs-toggle="tooltip" data-bs-delay='{ "show": 600, "hide": 100 }' data-bs-placement="bottom" data-bs-title="Déconnexion">
             <a href="{{ path('app_logout') }}" class="">
