--- a/templates/BackEnd/Administrateur/voirUnEmploye.html.twig
+++ b/templates/BackEnd/Administrateur/voirUnEmploye.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Voir un employé{% endblock %}
+{% block title %}Informations employé{% endblock %}
 
 {% block body %}
 <div class="d-flex justify-content-end position-fixed top-0 start-0 m-3">
