--- a/templates/FrontEnd/EditerUnCompteClient_.html.twig
+++ b/templates/FrontEnd/EditerUnCompteClient_.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{% if edition == true %}Editer{% else %}Ajouter{% endif %} un client{% endblock %}
+{% block title %}{% if edition == true %}Editer{% else %}Ajouter{% endif %} un compte client{% endblock %}
 
 {% block body %}
 
