--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,25 +25,26 @@
         {% endblock %}
     </head>
     <body>
-    {{dump(app)}}
+
 {% if app.user and app.user.sesRolesContiennent( "ADMINISTRATEUR" ) %}
         <header class="d-flex flex-column align-items-center mt-3 mb-3">
             <img src="{{ asset('assets/images/logo.png') }}" width="80px" alt="Logo CLO non trouvé.">  
             <div class="t-3">Compte client</div>
         </header>
 
-        <nav class="navbar navbar-expand-lg bg-body-tertiary mb-3">
-        <div class="container-fluid">
+        {% set sujet = app.session.get('sujet') %}
+        <nav class="navbar navbar-expand-lg mb-3">
+        <div class="container-fluid bg-light bg-opacity-10 mb-3">
             <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{ path('app_accueil_administrateur') }}">Home</a>
+                    <a class="nav-link {% if sujet == 'Accueil' %}active{% endif %}" href="{{ path('app_accueil_administrateur') }}">Accueil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('app_liste_des_employes') }}">Employés</a>
+                    <a class="nav-link {% if sujet == 'Employes' %}active{% endif %}" href="{{ path('app_liste_des_employes') }}">Employés</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('app_liste_des_comptes_clients') }}">Clients</a>
+                    <a class="nav-link {% if sujet == 'ComptesClients' %}active{% endif %}" href="{{ path('app_liste_des_comptes_clients') }}">Clients</a>
                 </li>
             </ul>
             </div>
