Tentatives de 404.html.twig et de Fixtures.

--- a/templates/FrontEnd/EditerUnContrat.html.twig
+++ b/templates/FrontEnd/EditerUnContrat.html.twig
@@ -20,6 +20,10 @@
     </a>
 </div>
 
+<h5 class="d-flex justify-content-center">
+{% if edition == true %}Editer{% else %}Ajouter{% endif %} un Contrat
+</h5>
+
 {{ form_start(form) }}
 
 <div class="col-12">
