--- a/templates/BackEnd/listeDesComptesClients.html.twig
+++ b/templates/BackEnd/listeDesComptesClients.html.twig
@@ -39,6 +39,8 @@
     </a>
 </div>
 
+<h5 class="d-flex justify-content-center">Liste des comptes clients</h5>
+
 <a href="{{ path('app_ajouter_un_compte_client') }}" class="btn btn-outline-light btn-sm shadow mb-4" data-bs-custom-class="custom-tooltip-ajout shadow" data-bs-toggle="tooltip" data-bs-delay='{ "show": 600, "hide": 100 }' data-bs-placement="bottom" data-bs-title="Ajouter un compte client">
 {# &#x2795; #}<img class="icone-cliquable" src="{{ asset('assets/images/icone_ajouter.png') }}" alt="Icône non trouvé."></img>
 </a>
