--- a/templates/FrontEnd/EditerUnContrat_.html.twig
+++ b/templates/FrontEnd/EditerUnContrat_.html.twig
@@ -10,7 +10,7 @@
     {% endfor %}
 </ul> #}
 
-{% block title %}{% if edition == true %}Editer{% else %}Ajouter{% endif %} un compte client{% endblock %}
+{% block title %}{% if edition == true %}Editer{% else %}Ajouter{% endif %} un contrat{% endblock %}
 
 {% block body %}
 
